--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -3,11 +3,11 @@ footer{
         background: $degradado-principal;
 
         img{
-            width: $medida-estandar-30;
-            height: $medida-estandar-40;
-            margin-right: $medida-estandar-10;
-            padding-bottom: $medida-estandar-10;
-            margin-left: $medida-estandar-10;
+            width: map-get($map: $medidas-estandar, $key: 30);
+            height: map-get($map: $medidas-estandar, $key: 40);
+            margin-right: map-get($map: $medidas-estandar, $key: 10);
+            padding-bottom: map-get($map: $medidas-estandar, $key: 10);
+            margin-left: map-get($map: $medidas-estandar, $key: 10);
         }
     }
 }
@@ -15,7 +15,7 @@ footer{
 @media screen and (min-width:0px) and (max-width: 768px){
     footer{
         .links{
-            width: $porcentaje-estandar-100;
+            width: map-get($map: $porcentajes-estandar, $key: 100);
         }
     }
 }
