--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,17 +1,17 @@
 header{
     background: $degradado-principal;
     .nav{
-        padding: $medida-estandar-0;
+        padding: map-get($map: $medidas-estandar, $key: 0);
         img{
-            width: $medida-estandar-50;
-            height: $medida-estandar-50;
+            width: map-get($map: $medidas-estandar, $key: 50);
+            height: map-get($map: $medidas-estandar, $key: 50);
         }
         img:hover{
             background-color:$color-estandar-1;
-            border-radius: $porcentaje-estandar-50;
+            border-radius: map-get($map: $porcentajes-estandar, $key: 50);
         }
         .lista{
-            width: $porcentaje-estandar-100;
+            width: map-get($map: $porcentajes-estandar, $key: 100);
             li{
                 font-size: $fuente-escala-1;
                 text-transform: $fuente-forma-mayus;
