--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,35 +7,6 @@ $borde-estandar-2:5px solid black;
 $direccion-estandar-column:column;
 $direccion-estandar-col-rev:column-reverse;
 
-$porcentaje-estandar-50:50%;
-$porcentaje-estandar-60:60%;
-$porcentaje-estandar-90:90%;
-$porcentaje-estandar-100:100%;
-
-$posicion-estandar-top:top;
-$posicion-estandar-center:center;
-$posicion-estandar-bottom:bottom;
-$posicion-estandar-auto:auto;
-$posicion-estandar-rigth:right;
-$posicion-estandar-relative:relative;
-
-$medida-estandar-0:0px;
-$medida-estandar-10:10px;
-$medida-estandar-25:25px;
-$medida-estandar-30:30px;
-$medida-estandar-40:40px;
-$medida-estandar-50:50px;
-$medida-estandar-110:110px;
-$medida-estandar-200:200px;
-$medida-estandar-300:300px;
-$medida-estandar-320:320px;
-$medida-estandar-350:350px;
-$medida-estandar-370:370px;
-$medida-estandar-500:500px;
-$medida-estandar-536:536px;
-$medida-estandar-600:600px;
-$medida-estandar-700:700px;
-
 $fuente-escala-1:1rem;
 $fuente-escala-2:1.2rem;
 $fuente-escala-3:1.3rem;
@@ -76,3 +47,73 @@ $color-estandar-6:rgba(0, 0, 0, 0.525);
 $color-estandar-7:rgb(255, 255, 255);
 $color-estandar-8:rgb(22, 78, 139);
 $color-estandar-9:rgb(58, 113, 172);
+
+$porcentaje-estandar-50:50%;
+$porcentaje-estandar-60:60%;
+$porcentaje-estandar-90:90%;
+$porcentaje-estandar-100:100%;
+
+$porcentajes-estandar:(
+    50:$porcentaje-estandar-50,
+    60:$porcentaje-estandar-60,
+    90:$porcentaje-estandar-90,
+    100:$porcentaje-estandar-100
+);
+
+$posicion-estandar-top:top;
+$posicion-estandar-center:center;
+$posicion-estandar-bottom:bottom;
+$posicion-estandar-auto:auto;
+$posicion-estandar-rigth:right;
+$posicion-estandar-relative:relative;
+
+$posicion-estardar:(
+    arriba:$posicion-estandar-top,
+    centrado:$posicion-estandar-center,
+    abajo:$posicion-estandar-bottom,
+    derecha:$posicion-estandar-rigth,
+    relativo:$posicion-estandar-relative,
+    automatico:$posicion-estandar-auto
+);
+
+$medida-estandar-0:0px;
+$medida-estandar-10:10px;
+$medida-estandar-25:25px;
+$medida-estandar-30:30px;
+$medida-estandar-40:40px;
+$medida-estandar-50:50px;
+$medida-estandar-110:110px;
+$medida-estandar-200:200px;
+$medida-estandar-300:300px;
+$medida-estandar-320:320px;
+$medida-estandar-350:350px;
+$medida-estandar-370:370px;
+$medida-estandar-500:500px;
+$medida-estandar-536:536px;
+$medida-estandar-600:600px;
+$medida-estandar-700:700px;
+
+$medidas-estandar:(
+    0:$medida-estandar-0,
+    10:$medida-estandar-10,
+    25:$medida-estandar-25,
+    30:$medida-estandar-30,
+    40:$medida-estandar-40,
+    50:$medida-estandar-50,
+    110:$medida-estandar-110,
+    200:$medida-estandar-200,
+    300:$medida-estandar-300,
+    320:$medida-estandar-320,
+    350:$medida-estandar-350,
+    370:$medida-estandar-370,
+    500:$medida-estandar-500,
+    536:$medida-estandar-536,
+    600:$medida-estandar-600,
+    700:$medida-estandar-700
+);
+
+
+
+
+
+
