--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -22,16 +22,16 @@ $tipo-fuente-estandar-2:'Shadows Into Light', cursive;
 $tipo-fuente-estandar-3:Shadows, sans-serif;
 
 $imagen-fondo-main:url('../assets/img/storm_background.jpg');
-$imagen-fondo-diablo-1:url('../assets/img/diablo_4.png');
-$imagen-fondo-diablo-2:url('../assets/img/diablo_4_movil.png');
-$imagen-fondo-sky-1:url('../assets/img/no_man_sky.png');
-$imagen-fondo-sky-2:url('../assets/img/no_man_sky_movil.png');
+$imagen-fondo-diablo-1:url('../assets/img/diablo_4.jpg');
+$imagen-fondo-diablo-2:url('../assets/img/diablo_4_movil.jpg');
+$imagen-fondo-sky-1:url('../assets/img/no_man_sky.jpg');
+$imagen-fondo-sky-2:url('../assets/img/no_man_sky_movil.jpg');
 $imagen-fondo-street-1:url('../assets/img/street_fighter_6.jpg');
-$imagen-fondo-street-2:url('../assets/img/street_fighter_6_movil.png');
+$imagen-fondo-street-2:url('../assets/img/street_fighter_6_movil.jpg');
 $imagen-fondo-dredge-1:url('../assets/img/dredge.jpg');
-$imagen-fondo-dredge-2:url('../assets/img/dredge_movil.png');
+$imagen-fondo-dredge-2:url('../assets/img/dredge_movil.jpg');
 $imagen-fondo-star-1:url('../assets/img/star_war_survivor.jpg');
-$imagen-fondo-star-2:url('../assets/img/star_war_survivor_movil.png');
+$imagen-fondo-star-2:url('../assets/img/star_war_survivor_movil.jpg');
 $imagen-fondo-avance-1:url('../assets/img/fondo_analisis_1.jpg');
 $imagen-fondo-avance-2:url('../assets/img/fondo_analisis_2.jpg');
 
