feature/preEntregaTres Se corrigieron textos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -89,7 +89,7 @@ header .nav .lista li .active {
 header .navbar-dark .navbar-nav .nav-link:hover {
   background: linear-gradient(to right, rgba(11, 66, 121, 0.5921568627), rgba(90, 113, 147, 0.399));
   border-radius: 5px;
-  animation: mover 1.7s ease-in;
+  animation: mover 1.2s ease-in;
 }
 @keyframes mover {
   15% {
@@ -117,6 +117,7 @@ main {
   background-image: url("../assets/img/storm_background.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 main .contenedorInicio {
   background: rgba(0, 0, 0, 0.473);
@@ -170,6 +171,7 @@ main {
   background-image: url("../assets/img/storm_background.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 main .divDiablo4 {
   height: 600px;
@@ -234,6 +236,7 @@ main {
   background-image: url("../assets/img/storm_background.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 main .divContenedorAvance1 {
   background-image: url("../assets/img/fondo_analisis_1.jpg");
@@ -261,6 +264,7 @@ main {
   background-image: url("../assets/img/storm_background.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 main .parrafoColor {
   color: rgb(255, 255, 255);
@@ -279,6 +283,7 @@ main {
   background-image: url("../assets/img/storm_background.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 main .formulario {
   width: 60%;
